--- a/2022-03-13_VerificationWork/2022-03-13_VerificationWork.csproj
+++ b/2022-03-13_VerificationWork/2022-03-13_VerificationWork.csproj
@@ -8,4 +8,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Bson" Version="2.15.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.15.0" />
+  </ItemGroup>
+
 </Project>
