--- a/WpfCharacterEditor.csproj
+++ b/WpfCharacterEditor.csproj
@@ -63,6 +63,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Class\Proffession.cs" />
+    <Compile Include="Class\Strength.cs" />
+    <Compile Include="Class\Сharacter.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
