--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,7 @@
   <package id="DnsClient" version="1.6.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net472" />
   <package id="MongoDB.Bson" version="2.15.0" targetFramework="net472" />
+  <package id="MongoDB.Driver" version="2.15.0" targetFramework="net472" />
   <package id="MongoDB.Driver.Core" version="2.15.0" targetFramework="net472" />
   <package id="MongoDB.Libmongocrypt" version="1.3.0" targetFramework="net472" />
   <package id="SharpCompress" version="0.30.1" targetFramework="net472" />
