--- a/WpfCharacterEditor.csproj
+++ b/WpfCharacterEditor.csproj
@@ -84,10 +84,11 @@
     <Compile Include="Class\Agility.cs" />
     <Compile Include="Class\Endurance.cs" />
     <Compile Include="Class\Intelligence.cs" />
+    <Compile Include="Class\MongoDBBase.cs" />
     <Compile Include="Class\Proffession.cs" />
     <Compile Include="Class\Strength.cs" />
     <Compile Include="Class\Сharacter.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="MainWindow.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
